--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
-torch>=1.9.0
-torchvision>=0.10.0
-albumentations>=1.0.3
-segmentation-models-pytorch>=0.2.1
-opencv-python>=4.5.3
-tensorboard>=2.6.0
-numpy>=1.20.3
-tqdm>=4.62.2
-scikit-learn>=0.24.2
-matplotlib>=3.4.3
-gdown
-patool
+torch>=1.7.0
+torchvision>=0.8.0
+numpy>=1.19.0
+opencv-python>=4.5.0
+albumentations>=1.0.0
+segmentation-models-pytorch>=0.2.0
+tqdm>=4.50.0
+scikit-learn>=0.24.0
+matplotlib>=3.3.0
+tensorboard>=2.4.0
+Pillow>=8.0.0
